force-app/main/default/objects/Service_Recourse_Engineers__c/Service_Recourse_Engineers__c.object-meta.xml
<CustomObject>
    <label>Service Resource Engineers</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Resource Engineers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>