force-app/main/default/objects/Service_Recourse_Engineers__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Resource Engineers</relationshipLabel>
    <relationshipName>Service_Resource_Engineers</relationshipName>
    <type>Lookup</type>
</CustomField>