force-app/main/default/objects/Service_Recourse_Engineers__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Service Resource Engineers</relationshipLabel>
    <relationshipName>Service_Resource_Engineers</relationshipName>
    <type>Lookup</type>
</CustomField>