force-app/main/default/objects/Service_Recourse_Engineers__c/listViews/Service_Agents_Service_Recourse_Engineers.listView-meta.xml
<ListView>
    <fullName>Service_Agents_Service_Recourse_Engineers</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Agents</label>
    <queue>Service_Agents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>